--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <!-- Add your header content here, if any -->
+        <div class="logo"></div>
     </header>
     
     <div class="container">
