--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>AirBnB Clone</title>
-    <link rel="icon" href="images/icon.ico">
+    <link rel="icon" href="images/icon.png">
     <link rel="stylesheet" href="../static/styles/4-common.css">
     <link rel="stylesheet" href="../static/styles/3-header.css">
     <link rel="stylesheet" href="../static/styles/3-footer.css">
